Removed image event listener because leaving align-items-center in the regular style is fine. Fixed logic for disabling color (colors are shown and blurs are properly removed when user gives up or successfully guesses)

--- a/styles.css
+++ b/styles.css
@@ -235,15 +235,12 @@ img.char-photo {
 .img-container {
     display: flex;
     justify-content: center;
+    align-items: center;
     --blur-amount: 0;
     --grayscale-amount: 0;
     filter: blur(var(--blur-amount)) grayscale(var(--grayscale-amount));
     transition: filter 0.3s ease-in-out;
     overflow: hidden;
-}
-
-.center-img-vertically {
-    align-items: center;
 }
 
 .blur-xl {
